Avoid magic number